# analog

./: .gitignore  README.md  build.sh  goaccess.conf  goaccess.html  pyproject.toml  report.html  report.ipynb  workbook.ipynb
analog/: __init__.py  __main__.py  analyzer.py  atomic_update.py  bot_detector.py  bots.yml  data_manager.py  error.py  ipaddr.py  label.py  month_in_year.py  parser.py  progress.py  schema.py  visualizer.py
docs/: grammar.md  hands-on-2.ipynb  hands-on.ipynb  index.md
stubs/: regex.pyi
stubs/IPython/: display.pyi
stubs/pyarrow/: __init__.pyi  parquet.pyi
stubs/ua_parser/: user_agent_parser.pyi
test/: fuzz_parser.py  test_atomic_update.py  test_bot_detector.py  test_label.py  test_month_in_year.py  test_parser.py
